# rare-event-analysis

./: .travis.yml  404.html  CHANGELOG.rst  LICENSE  Pipfile  README.rst  changelog.html  genindex.html  index.html  objects.inv  readme.html  search.html  searchindex.js  setup.cfg  setup.py
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
notebooks/: 00_FEATURES_build_model_features.ipynb
notebooks/old-versions/: SCPC2009_Analysis_Python.ipynb  SCPC2009_Analysis_R.ipynb
reports/: SCPC2009_stata.do
src/mobile_payment/: __main__.py  cli.py
src/rare_events/: __main__.py  logger.py
src/rare_events/mobile_payment/features/: build_features.py
tests/: test_mobile_payment.py  test_rare_events.py
