[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
testpaths =
    tests
    mobile_payment
    # manually add any additional package names if created
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --cov=mobile_payment
    # manually add --cov= any additional package names if created
    --cov-branch
    --pyarg
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = mobile_payment
default_section = THIRDPARTY
forced_separate = test_mobile_payment
not_skip = __init__.py
skip = migrations

[options]
setup_requires = setuptools_scm
